feat(m4-t8): expand virtual package queries and intent resolution